--- a/info.plist
+++ b/info.plist
@@ -5,6 +5,11 @@
     <!-- Other keys -->
     <key>NSLocationWhenInUseUsageDescription</key>
     <string>We need access to your location to check if you have moved.</string>
+    <key>NSCameraUsageDescription</key>
+<string>We need access to your camera to take pictures.</string>
+<key>NSPhotoLibraryAddUsageDescription</key>
+<string>We need access to your photo library to save the pictures.</string>
+
     <!-- Other keys -->
 </dict>
 </plist>
